index page in spanish

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
     </p> 
        
     Les presento a Kayita: <br/>
-    <img src="img/ky.png" alt="Kayita" height= "350px"/>
+    <img src="img/ky.png" alt="Kayita" height= "250px"/>
   </div>
 
-  <div class="h3 pad">Y un poco más de info</div>
+  <div class="h3 pad">Notas</div>
   <div class="main-text pad">
     <p>
-       Professor Bairstone and Dr Day have made a sensational discovery.<br/>
-       They have discovered the Monk Diamond in a remote cave in Siberia.<br/>
+       Esta página de bienvenida sólo es una prueba de concepto.<br/>
+       Ya funciona desde github pages, ahora tengo que editar el contenido. <br/>
     </p>
   </div>
   
@@ -42,3 +42,9 @@
   <div class="date pad">2023</div>
 </body>
 </html>
+
+<!-- 
+git add -all
+git commit -m "comment here"
+git push -u origin main
+ -->
