better font sizes

--- a/bl/b230604.html
+++ b/bl/b230604.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <p></p>
-  <div class="header pad"><a href="../home.html">Pablo Cotera</a></div> 
+  <div class="header pad"><a href="../index.html">Pablo Cotera</a></div> 
   <hr color="#EEEEEE">
 <!-- ---------------------------------------------------------------- -->
 
