better font sizes

--- a/ct.html
+++ b/ct.html
@@ -19,7 +19,8 @@
        Mi <a href="https://twitter.com/pablo_cotera">Twitter</a><br/>
        Mi <a href="mailto:pcotera@gmail.com">email</a><br/>
   </div>
-  
+  <div class="date pad">Última Actualización: 2023</div>
+
 <!-- ---------------------------------------------------------------- -->
   <hr color="#EEEEEE">
   <div class="menu pad">
@@ -29,6 +30,5 @@
     <a href="ct.html">Contacto</a>
     <p></p>
   </div>
-  <div class="date pad">2023</div>
 </body>
 </html>
