--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 <!-- ---------------------------------------------------------------- -->
   <hr color="#EEEEEE">
   <div class="menu pad">
-    <a href="pr.html">Proyectos &nbsp; · &nbsp;</a>
-    <a href="bl.html">Blog &nbsp; · &nbsp;</a>
-    <a href="br.html">Breviario &nbsp; · &nbsp;</a>
+    <a href="pr.html">Proyectos · </a>
+    <a href="bl.html">Blog · </a>
+    <a href="br.html">Breviario · </a>
     <a href="ct.html">Contacto</a>
     <p></p>
   </div>
