changes in date layout

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
     <img src="img/ky.png" alt="Kayita" height= "250px"/>
   </div>
 
-  <div class="h3 pad">Notas</div>
   <div class="main-text pad">
     <p>
        Esta página de bienvenida sólo es una prueba de concepto.<br/>
@@ -33,13 +32,12 @@
 <!-- ---------------------------------------------------------------- -->
   <hr color="#EEEEEE">
   <div class="menu pad">
-    <a href="pr.html">Proyectos · </a>
-    <a href="bl.html">Blog · </a>
-    <a href="br.html">Breviario · </a>
-    <a href="ct.html">Contacto</a>
+    <a href="pr.html">Proyectos &nbsp; · &nbsp;</a>
+    <a href="bl.html">Blog &nbsp; · &nbsp;</a>
+    <a href="br.html">Breviario &nbsp; · &nbsp;</a>
+    <a href="in.html">Info</a>
     <p></p>
   </div>
-  <div class="date pad">2023</div>
 </body>
 </html>
 
