--- a/bl/b230604.html
+++ b/bl/b230604.html
@@ -32,7 +32,7 @@
     <a href="../pr.html">Proyectos &nbsp; · &nbsp;</a>
     <a href="../bl.html">Blog &nbsp; · &nbsp;</a>
     <a href="../br.html">Breviario &nbsp; · &nbsp;</a>
-    <a href="../ct.html">Contacto</a>
+    <a href="../in.html">Contacto</a>
     <p></p>
   </div>
   <div class="date pad">2023</div>
