--- a/in.html
+++ b/in.html
@@ -27,7 +27,7 @@
     <a href="pr.html">Proyectos &nbsp; · &nbsp;</a>
     <a href="bl.html">Blog &nbsp; · &nbsp;</a>
     <a href="br.html">Breviario &nbsp; · &nbsp;</a>
-    <a href="ct.html">Contacto</a>
+    <a href="in.html">Info</a>
     <p></p>
   </div>
 </body>
