--- a/bl/b230604.html
+++ b/bl/b230604.html
@@ -32,9 +32,8 @@
     <a href="../pr.html">Proyectos &nbsp; · &nbsp;</a>
     <a href="../bl.html">Blog &nbsp; · &nbsp;</a>
     <a href="../br.html">Breviario &nbsp; · &nbsp;</a>
-    <a href="../in.html">Contacto</a>
+    <a href="../in.html">Info</a>
     <p></p>
   </div>
-  <div class="date pad">2023</div>
 </body>
 </html>
