Changed blog for ideas

--- a/bl/b230604.html
+++ b/bl/b230604.html
@@ -30,7 +30,7 @@
   <hr color="#EEEEEE">
   <div class="menu pad">
     <a href="../pr.html">Proyectos &nbsp; · &nbsp;</a>
-    <a href="../bl.html">Blog &nbsp; · &nbsp;</a>
+    <a href="../id.html">Ideas &nbsp; · &nbsp;</a>
     <a href="../br.html">Breviario &nbsp; · &nbsp;</a>
     <a href="../in.html">Info</a>
     <p></p>
