--- a/in.html
+++ b/in.html
@@ -11,8 +11,14 @@
   <div class="header pad"><a href="index.html">Pablo Cotera</a></div> 
   <hr color="#EEEEEE">
 <!-- ---------------------------------------------------------------- -->
-
-  <div class="h2 pad">Contacto</div>
+  <div class="h3 pad">Sobre mi</div>
+  <div class="main-text pad">
+    <p>
+    Escribir aqui un poco sobre mi historia.<br/>
+    Aunque estudié ingeniería mecatrónica en México mis intereses cambian a menudo: he trabajado en la industria automotriz, en investigación de sistemas embebidos y manufactura, tecnologías sustentables, agua y saneamiento.<br/>  
+    </p>
+  </div>
+  <div class="h3 pad">Contacto</div>
   <div class="main-text pad">
     <p>
        Links a otras redes:<br/>
@@ -25,7 +31,7 @@
   <hr color="#EEEEEE">
   <div class="menu pad">
     <a href="pr.html">Proyectos &nbsp; · &nbsp;</a>
-    <a href="bl.html">Blog &nbsp; · &nbsp;</a>
+    <a href="id.html">Ideas &nbsp; · &nbsp;</a>
     <a href="br.html">Breviario &nbsp; · &nbsp;</a>
     <a href="in.html">Info</a>
     <p></p>
