--- a/index.html
+++ b/index.html
@@ -11,29 +11,21 @@
   <div class="header pad"><a href="index.html">Pablo Cotera</a></div> 
   <hr color="#EEEEEE">
 <!-- ---------------------------------------------------------------- -->
-
+  <div class="h3 pad">¿Qué hay aquí?</div>
   <div class="main-text pad">
     <p>
-       En esta página voy a describir brevemente los proyectos que he hecho.<br/>
-       Bienvenidos!
+       Un espacio para compartir las <a href="id.html">ideas</a> que encuentro interesantes y algunos de los <a href="pr.html">proyectos</a> en los que he trabajado en los últimos años.<br/>
+       <br/>
+       El <a href="br.html">breviario</a> es una lista de frases que me han gustado y llevo anotando desde el 2010 y por su acaso, algo más de <a href="in.html">información</a>.  
     </p> 
-       
-    Les presento a Kayita: <br/>
-    <img src="img/ky.png" alt="Kayita" height= "250px"/>
+    <img src="img/yo.png" alt="Yo meroles" height= "300px"/>
   </div>
 
-  <div class="main-text pad">
-    <p>
-       Esta página de bienvenida sólo es una prueba de concepto.<br/>
-       Ya funciona desde github pages, ahora tengo que editar el contenido. <br/>
-    </p>
-  </div>
-  
 <!-- ---------------------------------------------------------------- -->
   <hr color="#EEEEEE">
   <div class="menu pad">
     <a href="pr.html">Proyectos &nbsp; · &nbsp;</a>
-    <a href="bl.html">Blog &nbsp; · &nbsp;</a>
+    <a href="id.html">Ideas &nbsp; · &nbsp;</a>
     <a href="br.html">Breviario &nbsp; · &nbsp;</a>
     <a href="in.html">Info</a>
     <p></p>
