--- a/pr.html
+++ b/pr.html
@@ -12,7 +12,7 @@
   <hr color="#EEEEEE">
 <!-- ---------------------------------------------------------------- -->
 
-  <div class="h2 pad">Proyectos</div>
+  <div class="h3 pad">Proyectos</div>
   <div class="main-text pad">
     <p>
        En esta página voy a describir brevemente los proyectos que he hecho.<br/>
@@ -43,7 +43,7 @@
   <hr color="#EEEEEE">
   <div class="menu pad">
     <a href="pr.html">Proyectos &nbsp; · &nbsp;</a>
-    <a href="bl.html">Blog &nbsp; · &nbsp;</a>
+    <a href="id.html">Ideas &nbsp; · &nbsp;</a>
     <a href="br.html">Breviario &nbsp; · &nbsp;</a>
     <a href="in.html">Info</a>
     <p></p>
