--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
   <div class="header pad"><a href="index.html">Pablo Cotera</a></div> 
   <hr color="#EEEEEE">
 <!-- ---------------------------------------------------------------- -->
-  <div class="h3 pad">¿Qué hay aquí?</div>
+  
   <div class="main-text pad">
+    ¿QUÉ HAY AQUÍ?
     <p>
        Un espacio para compartir las <a href="id.html">ideas</a> que encuentro interesantes y algunos de los <a href="pr.html">proyectos</a> en los que he trabajado en los últimos años.<br/>
        <br/>
