--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <p>
        Un espacio para compartir las <a href="id.html">ideas</a> que encuentro interesantes y algunos de los <a href="pr.html">proyectos</a> en los que he trabajado en los últimos años.<br/>
        <br/>
-       El <a href="br.html">breviario</a> es una lista de frases que me han gustado y llevo anotando desde el 2010 y por su acaso, algo más de <a href="in.html">información</a>.  
+       El <a href="br.html">breviario</a> es una lista de frases que me han gustado y llevo anotando desde el 2010 y por si acaso, algo más de <a href="in.html">información</a>.  
     </p> 
     <img src="img/yo.png" alt="Yo meroles" height= "200px"/>
   </div>
