With final header configuration

--- a/br.html
+++ b/br.html
@@ -5,6 +5,7 @@
   <title>Pablo Cotera</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="logo.png">
 </head>
 <body>
   <p></p>
@@ -12,18 +13,18 @@
   <hr color="#EEEEEE">
 <!-- ---------------------------------------------------------------- -->
 
-  <div class="h2 pad">Breviario</div>
+  <div class="h3 pad">Breviario</div>
   <div class="main-text pad">
-    <p>
-       En esta página vamos a enlistar las frases que he ido anotando<br/>
-       Con la breve explicación de que no serán citadas, porque considero que <a href="bl.html">no hay ideas originales</a><br/>
-    </p> 
-    <ul>
-      <li>"Ve deshaciendo tu vida poco a poco, para que menos muera cuando mueras"</li>
-      <li>"Impress Yourself"</li>
-      <li>"Cada chancho pa su rancho"</li>
-    </ul> 
-    <img src="img/ky.png" alt="Kayita" height= "150px"/>
+    "Del lat. <a href="https://dle.rae.es/breviario"><i> breviarium</i></a> 'epítome', 'inventario'. Libro de memoria o de apuntamiento."  
+    </a><br><br>
+    En 2010 empecé a escribir en una libreta frases que me encontraba y quería conservar.<br>
+    Decidí guardarlas sin autor, entre otras razones para darle valor únicamente al contenido.<br> 
+    Aquí comparto algunas como se me fueron apareciendo. 
+    <ol>
+      <li>Ve deshaciendo tu vida poco a poco, para que menos muera cuando mueras</li>
+      <li>Impress Yourself</li>
+      <li>Cada chancho pa su rancho</li>
+    </ol> 
   </div>
   
 <!-- ---------------------------------------------------------------- -->
