--- a/id.html
+++ b/id.html
@@ -5,6 +5,7 @@
   <title>Pablo Cotera</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="logo.png">
 </head>
 <body>
   <p></p>
@@ -12,19 +13,12 @@
   <hr color="#EEEEEE">
 <!-- ---------------------------------------------------------------- -->
 
-  <div class="h2 pad">Blog</div>
+  <div class="h3 pad">Ideas</div>
   <div class="main-text pad">
-    <p>
-       En esta página van a estar los links a otras páginas del blog<br/>
-       Actuará como un índice con las entradas más nuevas al principio<br/>
-       Y una breve descripción de lo que se habla en esa entrada.<br/> 
-    </p> 
-    <p>
-      La primer entrada del blog es la del <a href="bl/b230604.html">4 de Junio de 2023</a> 
-      cuando después de un fin de semana completo pude tener el layout como lo quería,
-      usando sólo HTML y css. 
-    </p>
-    <img src="img/ky.png" alt="Kayita" height= "150px"/>
+    En esta página van a estar los links a otras páginas del blog con una breve descripción de lo que se habla.
+    Actuará como un índice con las entradas más nuevas al principio.<br>
+    <br>
+    <a href="id/id230604.html">4 Jun 2023.</a> Después de un fin de semana completo pude tener el layout como lo quería, usando sólo HTML y css. <br><br>
   </div>
   
 <!-- ---------------------------------------------------------------- -->
