--- a/in.html
+++ b/in.html
@@ -5,27 +5,29 @@
   <title>Pablo Cotera</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="logo.png">
 </head>
 <body>
   <p></p>
   <div class="header pad"><a href="index.html">Pablo Cotera</a></div> 
   <hr color="#EEEEEE">
 <!-- ---------------------------------------------------------------- -->
+
   <div class="h3 pad">Sobre mi</div>
   <div class="main-text pad">
-    <p>
-    Escribir aqui un poco sobre mi historia.<br/>
-    Aunque estudié ingeniería mecatrónica en México mis intereses cambian a menudo: he trabajado en la industria automotriz, en investigación de sistemas embebidos y manufactura, tecnologías sustentables, agua y saneamiento.<br/>  
-    </p>
+    Aunque estudié ingeniería mecatrónica en México mis intereses cambian a menudo: he trabajado en la industria automotriz, en investigación de sistemas embebidos y manufactura, tecnologías sustentables, agua y saneamiento.<br>  
+    También tengo una perrita maravillosa que se llama Kaya:<br><br>
+    <img src="img/ky.png" alt="Kayita" height= "200px"/>
   </div>
   <div class="h3 pad">Contacto</div>
   <div class="main-text pad">
-    <p>
-       Links a otras redes:<br/>
-       Mi <a href="https://twitter.com/pablo_cotera">Twitter</a><br/>
-       Mi <a href="mailto:pcotera@gmail.com">email</a><br/>
+    Links a otras redes:<br>
+    Mi <a href="https://twitter.com/pablo_cotera">Twitter</a><br>
+    Mi <a href="mailto:pcotera@gmail.com">email</a><br>
   </div>
-  <div class="date pad">Última Actualización: 2023</div>
+  <div class="date pad">Última Actualización: 2023<br>
+  Peso total de la página: 768 KB
+  </div>
 
 <!-- ---------------------------------------------------------------- -->
   <hr color="#EEEEEE">
