--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Pablo Cotera</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="logo.png">
 </head>
 <body>
   <p></p>
@@ -12,13 +13,12 @@
   <hr color="#EEEEEE">
 <!-- ---------------------------------------------------------------- -->
   
+  <div class="h3 pad">¿Qué hay aquí?</div>
   <div class="main-text pad">
-    ¿QUÉ HAY AQUÍ?
-    <p>
-       Un espacio para compartir las <a href="id.html">ideas</a> que encuentro interesantes y algunos de los <a href="pr.html">proyectos</a> en los que he trabajado en los últimos años.<br/>
-       <br/>
-       El <a href="br.html">breviario</a> es una lista de frases que me han gustado y llevo anotando desde el 2010 y por si acaso, algo más de <a href="in.html">información</a>.  
-    </p> 
+    Un espacio para compartir las <a href="id.html">ideas</a> que encuentro interesantes y algunos de los <a href="pr.html">proyectos</a> en los que he trabajado en los últimos años.<br>
+    <br>
+    El <a href="br.html">breviario</a> es una lista de frases que me han gustado y llevo anotando desde el 2010 y por si acaso, algo más de <a href="in.html">información</a>. 
+    <br><br>
     <img src="img/yo.png" alt="Yo meroles" height= "200px"/>
   </div>
 
