--- a/pr.html
+++ b/pr.html
@@ -5,38 +5,28 @@
   <title>Pablo Cotera</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="logo.png">
 </head>
 <body>
   <p></p>
   <div class="header pad"><a href="index.html">Pablo Cotera</a></div> 
   <hr color="#EEEEEE">
 <!-- ---------------------------------------------------------------- -->
-
+  
   <div class="h3 pad">Proyectos</div>
   <div class="main-text pad">
-    <p>
-       En esta página voy a describir brevemente los proyectos que he hecho.<br/>
-       Estarán ordenados del más nuevo al más viejo: <br/>
-       Y actuará como un menú o índice a la pagina web de cada proyecto individual. 
-    </p> 
-    <p>
-       Entre ellos están: 
-       <ul>
-        <li>El modelo de termodinámica de la composta</li>
-        <li>Las mesas de origenplano</li>
-        <li>El paper de trilateración</li>
-       </ul> 
-    </p>
-    Y a kayita bebé: <br/>
-    <img src="img/ky.png" alt="Kayita" height= "350px"/>
+    En esta página voy a describir brevemente los proyectos que he hecho.<br>
+    Estarán ordenados del más nuevo al más viejo: <br>
+    Y actuará como un menú o índice a la pagina web de cada proyecto individual. 
   </div>
-
-  <div class="h3 pad">Projects two</div>
+  <div class="h3 pad">Ejemplos</div>
   <div class="main-text pad">
-    <p>
-       Professor Bairstone and Dr Day have made a sensational discovery.<br/>
-       They have discovered the Monk Diamond in a remote cave in Siberia.<br/>
-    </p>
+    Entre ellos están: 
+    <ul>
+      <li>El modelo de termodinámica de la composta</li>
+      <li>Las mesas de origenplano</li>
+      <li>El paper de trilateración</li>
+    </ul> 
   </div>
   
 <!-- ---------------------------------------------------------------- -->
