--- a/br.html
+++ b/br.html
@@ -18,12 +18,15 @@
     "Del lat. <a href="https://dle.rae.es/breviario"><i> breviarium</i></a> 'epítome', 'inventario'. Libro de memoria o de apuntamiento."  
     </a><br><br>
     En 2010 empecé a escribir en una libreta frases que me encontraba y quería conservar.<br>
-    Decidí guardarlas sin autor, entre otras razones para darle valor únicamente al contenido.<br> 
-    Aquí comparto algunas como se me fueron apareciendo. 
+    Decidí guardarlas sin autor para no juzgar su origen y darle valor únicamente al contenido.<br>
+    Aquí comparto algunas como se me fueron apareciendo. <br><br>
     <ol>
-      <li>Ve deshaciendo tu vida poco a poco, para que menos muera cuando mueras</li>
-      <li>Impress Yourself</li>
-      <li>Cada chancho pa su rancho</li>
+      <li>" Ve deshaciendo tu vida poco a poco, para que menos muera cuando mueras "</li>
+      <li>" The best way to get recognition is by not needing it. This is true in love, and business and everything else worth doing "</li>
+      <li>" Life is an end in itself "</li>
+      <li>" It makes sense that something at least a little like intentionality, something at least a little like experience, something at least a little like freedom, would have to exist on every level of physical reality "</li>
+      <li>" No hay nada peor que una conversación donde uno no entiende lo que el otro no le dice "</li>
+      <!-- <li>"  "</li> -->
     </ol> 
   </div>
   
