--- a/id/id230604.html
+++ b/id/id230604.html
@@ -13,7 +13,7 @@
   <hr color="#EEEEEE">
 <!-- ---------------------------------------------------------------- -->
 
-  <div class="h3 pad">Primera nota<br>04 Jun 2023</div>
+  <div class="h3 pad">Esto funciona<br>04 Jun 2023</div>
   <div class="main-text pad">
     Esta es la primera entrada del blog que escribo para la nueva página web.<br>
     Cuando digo nueva en realidad me refiero a que la retomé muchos años después de la original
