--- a/pr.html
+++ b/pr.html
@@ -24,7 +24,7 @@
     Entre ellos están: 
     <ul>
       <li>El modelo de termodinámica de la composta</li>
-      <li>Las mesas de origenplano</li>
+      <li>Las mesas de origenplano y sus <a href="docs/snow.gif">planos</a></li>
       <li>El paper de trilateración</li>
     </ul> 
   </div>
