--- a/in.html
+++ b/in.html
@@ -15,18 +15,17 @@
 
   <div class="h3 pad">Sobre mi</div>
   <div class="main-text pad">
-    Aunque estudié ingeniería mecatrónica en México mis intereses cambian a menudo: he trabajado en la industria automotriz, en investigación de sistemas embebidos y manufactura, tecnologías sustentables, agua y saneamiento.<br>  
-    También tengo una perrita maravillosa que se llama Kaya:<br><br>
+    Aunque estudié ingeniería mecatrónica en México mis intereses cambian a menudo: he trabajado en la industria automotriz, en investigación de sistemas embebidos y manufactura, tecnologías sustentables, agua y saneamiento.<br><br>
+    He dado clases, subo cerros, cocino mis propios postres y tengo una perrita maravillosa que se llama Kaya:<br><br>
     <img src="img/ky.png" alt="Kayita" height= "200px"/>
   </div>
   <div class="h3 pad">Contacto</div>
   <div class="main-text pad">
-    Links a otras redes:<br>
-    Mi <a href="https://twitter.com/pablo_cotera">Twitter</a><br>
-    Mi <a href="mailto:pcotera@gmail.com">email</a><br>
+    <a href="https://twitter.com/pablo_cotera">Twitter</a><br>
+    <a href="mailto:pcotera@gmail.com">Email</a><br>
   </div>
-  <div class="date pad">Última Actualización: 2023<br>
-  Peso total de la página: 330 KB
+  <div class="date pad">Última Actualización: Jul 2023<br>
+  Peso total de la página: 347 KB
   </div>
 
 <!-- ---------------------------------------------------------------- -->
