projects under construction

--- a/pr.html
+++ b/pr.html
@@ -19,6 +19,9 @@
     Estarán ordenados del más nuevo al más viejo: <br>
     Y actuará como un menú o índice a la pagina web de cada proyecto individual. 
   </div>
+
+  <div class="h3 pad">sección en construcción =S</div>
+  <!--
   <div class="h3 pad">Ejemplos</div>
   <div class="main-text pad">
     Entre ellos están: 
@@ -28,6 +31,7 @@
       <li>El paper de trilateración</li>
     </ul> 
   </div>
+  -->
   
 <!-- ---------------------------------------------------------------- -->
   <hr color="#EEEEEE">
