--- a/id.html
+++ b/id.html
@@ -15,7 +15,7 @@
 
   <div class="h3 pad">Ideas</div>
   <div class="main-text pad">
-    Esta página sirve como un índice para las ideas que escribo de vez en cuando, con una breve descripción y las más nuevas al principio. <br>
+    Aquí hay algunas de las ideas que escribo, con una breve descripción y las más nuevas al principio. <br>
     <br>
     <a href="id/id230604.html">Esto funciona.</a> Después de un fin de semana completo pude tener el layout como lo quería, usando sólo HTML y css. <br><br>
     <a href="id/id200925.html">On Ideas and thoughts.</a> La única entrada que conservé de la página anterior, habla sobre las ideas y los sueños, en inglés. <br><br>
