--- a/pr.html
+++ b/pr.html
@@ -15,9 +15,7 @@
   
   <div class="h3 pad">Proyectos</div>
   <div class="main-text pad">
-    En esta página voy a describir brevemente los proyectos que he hecho.<br>
-    Estarán ordenados del más nuevo al más viejo: <br>
-    Y actuará como un menú o índice a la pagina web de cada proyecto individual. 
+    Algunos de los proyectos en los que he participado, con una breve descripción y los más nuevos al principio. <br> 
   </div>
 
   <div class="h3 pad">sección en construcción =S</div>
