--- a/br.html
+++ b/br.html
@@ -18,8 +18,8 @@
     "Del lat. <a href="https://dle.rae.es/breviario"><i> breviarium</i></a> 'epítome', 'inventario'. Libro de memoria o de apuntamiento."  
     </a><br><br>
     En 2010 empecé a escribir en una libreta frases que me encontraba y quería conservar.<br>
-    Decidí guardarlas sin autor para no juzgar su origen y darle valor únicamente al contenido.<br>
-    Aquí comparto algunas como se me fueron apareciendo. <br><br>
+    Decidí guardarlas sin autor@ para no juzgar su origen y darle valor únicamente al contenido.<br>
+    Aquí comparto algunas de mis favoritas. <br><br>
     <ol>
       <li>" Ve deshaciendo tu vida poco a poco, para que menos muera cuando mueras "</li>
       <li>" The best way to get recognition is by not needing it. This is true in love, and business and everything else worth doing "</li>
