--- a/pr.html
+++ b/pr.html
@@ -15,7 +15,7 @@
   
   <div class="h3 pad">Proyectos</div>
   <div class="main-text pad">
-    Algunos de los proyectos en los que he participado, con una breve descripción y los más nuevos al principio. <br> 
+    Algunos de los proyectos en los que he participado. <br> 
   </div>
 
   <div class="h3 pad">sección en construcción =S</div>
