--- a/id.html
+++ b/id.html
@@ -17,8 +17,8 @@
   <div class="main-text pad">
     A veces comparto aquí algunas ideas, las más nuevas al principio. <br>
     <br>
-    <a href="id/id230604.html">Esto funciona.</a> Después de un fin de semana completo pude tener el layout como lo quería, usando sólo HTML y css. <br><br>
-    <a href="id/id200925.html">On Ideas and thoughts.</a> La única entrada que conservé de la página anterior, habla sobre las ideas y los sueños, en inglés. <br><br>
+    <a href="id/itworks.html">Esto funciona.</a> Después de un fin de semana completo pude tener el layout como lo quería, usando sólo HTML y css. <br><br>
+    <a href="id/onideas.html">On Ideas and thoughts.</a> La única entrada que conservé de la página anterior, habla sobre las ideas y los sueños, en inglés. <br><br>
   </div>
   
 <!-- ---------------------------------------------------------------- -->
