removed headers uppercase

--- a/in.html
+++ b/in.html
@@ -16,7 +16,7 @@
   <div class="h3 pad">Sobre mi</div>
   <div class="main-text pad">
     Aunque estudié ingeniería mecatrónica en México mis intereses cambian a menudo: he trabajado en la industria automotriz, en investigación de sistemas embebidos y manufactura, tecnologías sustentables, agua y saneamiento.<br><br>
-    He dado clases, subo cerros, cocino mis propios postres y tengo una perrita maravillosa que se llama Kaya:<br><br>
+    He dado clases, subo cerros, cocino mis propios postres y tengo una perrita que se llama Kaya:<br><br>
     <img src="img/ky.png" alt="Kayita" height= "200px"/>
   </div>
   <div class="h3 pad">Contacto</div>
