--- a/pr.html
+++ b/pr.html
@@ -15,21 +15,16 @@
   
   <div class="h3 pad">Proyectos</div>
   <div class="main-text pad">
-    Algunos de los proyectos en los que he participado. <br> 
-  </div>
-
-  <div class="h3 pad">sección en construcción =S</div>
-  <!--
-  <div class="h3 pad">Ejemplos</div>
-  <div class="main-text pad">
-    Entre ellos están: 
+    ** Sección en construcción **<br>
+    <br>
+    Aquí algunos de mis proyectos:
     <ul>
       <li>El modelo de termodinámica de la composta</li>
       <li>Las mesas de origenplano y sus <a href="docs/snow.gif">planos</a></li>
       <li>El paper de trilateración</li>
     </ul> 
   </div>
-  -->
+
   
 <!-- ---------------------------------------------------------------- -->
   <hr color="#EEEEEE">
