--- a/pr.html
+++ b/pr.html
@@ -16,12 +16,11 @@
   <div class="h3 pad">Proyectos</div>
   <div class="main-text pad">
     ** Sección en construcción **<br>
-    Las mesas de origenplano y sus <a href="docs/snow.gif">planos</a>
     <br>
     Aquí algunos de mis proyectos:
     <ul>
       <li>El modelo de termodinámica de la composta</li>
-      <li>Raspberry</li>
+      <li>Las mesas de origenplano y sus <a href="docs/snow.gif">planos</a></li>
       <li>El paper de trilateración</li>
     </ul> 
   </div>
