added breviario quotes

--- a/br.html
+++ b/br.html
@@ -20,14 +20,161 @@
     En 2010 empecé a escribir en una libreta frases que me encontraba y quería conservar.<br>
     Decidí guardarlas sin autor@ para no juzgar su origen y darle valor únicamente al contenido.<br>
     Aquí comparto algunas de mis favoritas. <br><br>
-    <ol>
-      <li>" Ve deshaciendo tu vida poco a poco, para que menos muera cuando mueras "</li><br>
-      <li>" The best way to get recognition is by not needing it. This is true in love, and business and everything else worth doing "</li><br>
-      <li>" Life is an end in itself "</li><br>
-      <li>" It makes sense that something at least a little like intentionality, something at least a little like experience, something at least a little like freedom, would have to exist on every level of physical reality "</li><br>
-      <li>" No hay nada peor que una conversación donde uno no entiende lo que el otro no le dice "</li><br>
+    <ul>
+      <li>So far as human life is mental life, it is a series of ideas made of the same stuff as dreams.</li><br>
+      <li>There is only mind being aware of ideas.</li><br>
+      <li>Whatever is known in any way is known ultimately as a thought.</li><br>
+      <li>We see our thoughts of things, not the things themselves.</li><br>
+      <li>The first half of life is devoted to forming a healthy ego, the second half is going inward and letting go of it.</li><br>
+      <li>A man's task is to become conscious of the contents that press upward from the unconscious.</li><br>
+      <li>We see objects separately and therefore successively.</li><br>
+      <li>The best way to get approval is not to need it. This is equally true in art and business. And love, and sex, and just about everything else worth doing.</li><br>
+      <li>Life is an end in itself.</li><br>
+      <li>You don't have a soul, you are a soul. You have a body.</li><br>
+      <li>It makes sense that something at least a little like intentionality, something at least a little like experience, something at least a little like freedom, would have to exist on every level of physical reality.</li><br>
+      <li></li><br>
+      <li>There are three things that cannot hide for long: the sun, the moon and the truth.</li><br>
+      <li>One cloud is enough to eclipse all the sun.</li><br>
+      <li>Anybody can be cynical. Dare to be an optimist.</li><br>
+      <li>Technology is a means to an end. And that end should be people.</li><br>
+      <li>The basic tool for the manipulation of reality, is the manipulation of words.</li><br>
+      <li>Reality is that which when you stop believing in it, doesn't go away.</li><br>
+      <li>I didn't come this far just to come this far.</li><br>
+      <li>Go big or go home.</li><br>
+      <li>The journey of a thousand miles begins with a single step.</li><br>
+      <li>Not all those who wander are lost.</li><br>
+      <li>Be kind to people, and if that's too much to ask, just be weird to people. It's the least you can do.</li><br>
+      <li>No news is good news.</li><br>
+      <li>Luck is what happens when preparation meets opportunity.</li><br>
+      <li>When bathroom is a priority, nothing else is a priority.</li><br>
+      <li>The answer must be in the attempt.</li><br>
+      <li>God is in the details.</li><br>
+      <li>We accept the love we think we deserve.</li><br>
+      <li>A morning of awkwardness is far better than a night of loneliness.</li><br>
+      <li>Listen, smile, agree, and then do whatever the fuck you were gonna do anyway.</li><br>
+      <li>Be the first, be smarter, or cheat.</li><br>
+      <li>If you can't fix it with duct tape or a martini, it ain't worth fixing.</li><br>
+      <li>Tomorrow: a mystical land where 99% of all human productivity, motivation and achievement is stored.</li><br>
+      <li>There is a time when panic is the appropriate response.</li><br>
+      <li>Be the change you want to see in the world.</li><br>
+      <li>Those who cannot remember the past are condemned to repeat it.</li><br>
+      <li>Gentlemen: I may not have a brain but I have an idea.</li><br>
+      <li>A ship is safe in the harbour, but that's not what ships are built for.</li><br>
+      <li>Home is wherever I'm with you.</li><br>
+      <li>A guy and a girl can be just friends, but at one point or another they will fall for each other. Maybe temporarily, maybe at the wrong time, maybe too late or maybe forever.</li><br>
+      <li>The only way to live longer is by making life more meaningful.</li><br>
+      <li>To think is to think for yourself.</li><br>
+      <li>Genuine understanding comes from hands-on experience.</li><br>
+      <li>If you can't explain it simply, you don't understand it well enough.</li><br>
+      <li>Invention is a product of inventoring: creativity develops easier with good memory.</li><br>
+      <li>You can't have understanding without facts. The more we remember the better we are at processing the world.</li><br>
+      <li>Let the one you hold be the one you want.</li><br>
+      <li>Love is all. Love is you.</li><br>
+      <li>I'd rather be lucky than good.</li><br>
+      <li>The weak can never forgive. Forgiveness is for the strong ones.</li><br>
+      <li>And as men filled not with wisdom but with the conceit of wisdom, they will be a burden to their fellow-men.</li><br>
+      <li>Any relationship needs two things to work: chemistry and timing.</li><br>
+      <li>We breathe, we pulse, we regenerate. Our hearts beat, our minds create, our souls ingest. 37 seconds, well used, is a lifetime.</li><br>
+      <li>We are here on earth to help others. What others are here for I have no idea.</li><br>
+      <li>Happiness is only real when it's shared.</li><br>
+      <li>I believe that the voices of fear, both from without and from within, can only be dispelled by trusting the voice that comes from the heart.</li><br>
+      <li>Rather than love, than money, than faith, than fame, than fairness, give me truth.</li><br>
+      <li>Great minds think alike.</li><br>
+      <li>Great people talk about ideas, average people talk about things, small people talk about other people.</li><br>
+      <li>You have to decide who you trust before you decide what to believe.</li><br>
+      <li>The only thing that looks good on me, is you.</li><br>
+      <li>If I have to much rope I'll hang myself.</li><br>
+      <li>There's two types of problems: your problems and my problems.</li><br>
+      <li>ESPAÑOL:</li><br>
+      <li>No hay nada peor que una conversación donde uno no entiende lo que el otro no le dice.</li><br>
+      <li>Nada tiene que ser difícil, las cosas se complican cuando buscamos algo que no hay.</li><br>
+      <li>La cercanía causa conflicto.</li><br>
+      <li>Ve deshaciendo tu vida poco a poco, para que menos muera cuando mueras.</li><br>
+      <li>Las palabras son amor.</li><br>
+      <li>Dar felicidad es merecerla.</li><br>
+      <li>-</li><br>
+      <li>Más vale pedir perdón que pedir permiso.</li><br>
+      <li>El hubiera es el pasado de me chingué.</li><br>
+      <li>Ríe y el mundo reirá contigo. Llora y llorarás solo.</li><br>
+      <li>Nunca lo he hecho, ni lo pienso volver a hacer.</li><br>
+      <li>No hay santo sin pasado, ni pecador sin futuro.</li><br>
+      <li>El que pega primero pega dos veces.</li><br>
+      <li>La felicidad requiere de la desdicha para equilibrarse, para volverse humana.</li><br>
+      <li>Un hombre solo tiene derecho a mirar a otro hacia abajo cuando ha de ayudarle a levantarse.</li><br>
+      <li>El provenir no me inquieta, lo que es duro a veces es el presente.</li><br>
+      <li>Un suspiro es el aire que te sobra de la persona que te falta.</li><br>
+      <li>Éramos muchos y parió la abuela.</li><br>
+      <li>A nadie le gusta que le estén dando de verdadazos.</li><br>
+      <li>Enamorarse es grave. No lo digo yo, lo dice la ortografía.</li><br>
+      <li>Es de sabios cambiar de opinión.</li><br>
+      <li>Si no puedes, no le juegues al chingón.</li><br>
+      <li>Me niego a creer en los datos duros, a escala subatómica son un absurdo.</li><br>
+      <li>El nombre hace al hombre.</li><br>
+      <li>Hay causas por las que vale la pena morir, pero ninguna por la cual matar.</li><br>
+      <li>De repente le resultó todo tan triste que había empezado a llorar. No por la muerte, sino al pensar que no lloraría cuando su esposa muriera.</li><br>
+      <li>A buen fin no hay mal principio.</li><br>
+      <li>Si ese cabrón no es un borracho, qué desperdicio de cara.</li><br>
+      <li>Te haces guey porque sabes que la cara te ayuda.</li><br>
+      <li>No hay inocentes, solo distintos grados de responsabilidad.</li><br>
+      <li>Si no me muevo no me ven.</li><br>
+      <li>Quien no se mueve no sentirá sus cadenas.</li><br>
+      <li>No hay que dar paso sin huarache.</li><br>
+      <li>La realidad está allá afuera, quien no sale no se conoce, y quien no se conoce no debería vivir consigo mismo.</li><br>
+      <li>La sabiduría se da en las carnes blandas.</li><br>
+      <li>Hay que darle un tiempecito pa que agarre sange el piojo.</li><br>
+      <li>Niégalo todo aunque te estén viendo.</li><br>
+      <li>Mal empieza la semana al que ahorcan en lunes.</li><br>
+      <li>El que por necesidad juega, por obligación pierde.</li><br>
+      <li>No hay que comer donde cagas.</li><br>
+      <li>La lectura hace al hombre completo, la conversación, ágil y el escribir, preciso.</li><br>
+      <li>Mientras más corriente más ambiente.</li><br>
+      <li>Mientras más grasoso, más sabroso.</li><br>
+      <li>Mientras más naco, más guapo.</li><br>
+      <li>Los verdaderos hombres se ganan su polvo a pulso, no pagando.</li><br>
+      <li>Pico de cera, que el pez por la boca muere.</li><br>
+      <li>Las costumbres son la cuota de ritmo que nos ayuda a vivir.</li><br>
+      <li>Su problema es que tiene un chingo de nada que hacer.</li><br>
+      <li>Esa noche las estrellas no brillaban, brillabas tú en todo el universo.</li><br>
+      <li>Va a salir más caro el caldo que las albóndigas.</li><br>
+      <li>A palabras necias, oídos sordos.</li><br>
+      <li>Lo opuesto al amor es la indiferencia.</li><br>
+      <li>Jamás es excusable ser malvado, pero hay cierto mérito en reconocer que uno lo es.</li><br>
+      <li>La confianza y la virginidad se pierden una sola vez en la vida.</li><br>
+      <li>Cuéntame algo, aunque sean mentiras.</li><br>
+      <li>El descaro desconcierta.</li><br>
+      <li>A falta de cariño hay que buscar el calor.</li><br>
+      <li>La auténtica belleza debe dejar lugar a dudas: debe dejar al alma una parte de su deseo.</li><br>
+      <li>No hay que pelear braguetas ajenas.</li><br>
+      <li>No te revientes reata que es el último jalón</li><br>
+      <li>Lo que no mata, engorda.</li><br>
+      <li>Para querer y para pelear se necesitan dos.</li><br>
+      <li>Tenía los labios blancos y secos de sal: necesitados de compasión.</li><br>
+      <li>Cuando te toca aunque te quites, y cuando no te toca, aunque te pongas.</li><br>
+      <li>La opción siempre es matar al caballo.</li><br>
+      <li>Más vale una débil tinta que una fuerte memoria.</li><br>
+      <li>La vida es una mierda, pero hay suficiente para todos.</li><br>
+      <li>Quién tuviera tiempo y estómago para decir la verdad.</li><br>
+      <li>Vino sagrado santo alimento, que haces afuera, vamos pa adentro.</li><br>
+      <li>A buen hambre no hay pan duro.</li><br>
+      <li>La religión es el opio del pueblo.</li><br>
+      <li>El aire en Europa huele distinto: a desarrollo y a soledad.</li><br>
+      <li>La ambición debe llegar hasta donde la felicidad se lo permite.</li><br>
+      <li>No hay crudo que no sea humilde, ni pendejo sin portafolio.</li><br>
+      <li>No hay cosas urgentes, solo pendejos con prisa.</li><br>
+      <li>Con buena tierra y tractor, cualquier pendejo es agricultor.</li><br>
+      <li>Cuando sientes no sabes, y cuando sabes ya dejaste de sentir.</li><br>
+      <li>Al que apaña Dios lo acompaña, y al que se apendeja Dios lo deja.</li><br>
+      <li>Hay que escribir solo para celebrar el hecho de poder hacerlo.</li><br>
+      <li>En este mundo hay dos tipos de personas: las que cagan bien y las que no.</li><br>
+      <li>Mujeres y hombres hay, lo que faltan son amores.</li><br>
+      <li>La verdad no lo parece solo porque lo sea, sino por cómo se diga.</li><br>
+      <li>El deterioro del cuerpo es nuestra fe de vida.</li><br>
+      <li>Cuando uno empieza a hablar del clima es porque no tiene nada de que hablar. </li><br>
+
+
+      <li></li><br>
       <!-- <li>"  "</li> -->
-    </ol> 
+    </ul> 
   </div>
   
 <!-- ---------------------------------------------------------------- -->
