added food rules

--- a/recetas.html
+++ b/recetas.html
@@ -47,7 +47,7 @@
     <a href="food/rolescanela.md">Roles de Canela</a><br>
     <a href="food/salsas.md">Salsas</a><br>
     <a href="food/scones.md">Scones</a><br>
-    <a href="food/rules.md">Food rules</a><br>
+    <a href="food/rules.pdf">Food rules</a><br>
   </div>
   
 <!-- ---------------------------------------------------------------- -->
