renamed recetas folder

--- a/recetas.html
+++ b/recetas.html
@@ -17,37 +17,37 @@
   <div class="main-text pad">
     Aquí están los links a mis principales recetas. <br>
     <br>
-    <a href="food/arroz.md">Arroz</a><br>
-    <a href="food/bollos.md">Bollos de cardamomo</a><br>
-    <a href="food/brownies.md">Brownies</a><br>
-    <a href="food/carlota.md">Carlota de limón</a><br>
-    <a href="food/conversiones.md">Conversiones</a><br>
-    <a href="food/easyrolescanela.md">Roles de canela rápidos</a><br>
-    <a href="food/galletasalmendra.md">Galletas navideñas de almendra</a><br>
-    <a href="food/galletasavena.md">Galletas de avena</a><br>
-    <a href="food/galletaschocolate.md">Galletas de chispas de chocolate</a><br>
-    <a href="food/huevos.md">Huevos</a><br>
-    <a href="food/indian.md">Recetas de la India</a><br>
-    <a href="food/masapay.md">Masa para pay</a><br>
-    <a href="food/masapayrustico.md">Masa para pay rústico</a><br>
-    <a href="food/masapizza.md">Masa para pizza</a><br>
-    <a href="food/muffinsavena.md">Muffins de avena</a><br>
-    <a href="food/pancakes.md">Pancakes</a><br>
-    <a href="food/pancenteno.md">Pan de centeno</a><br>
-    <a href="food/panchapata.md">Chapata</a><br>
-    <a href="food/buns.md">Pan para hamburguesa</a><br>
-    <a href="food/panmasamadre.md">Pan de masa madre</a><br>
-    <a href="food/panqueplatano.md">Panqué de plátano</a><br>
-    <a href="food/pastelchocolate.md">Pastel de chocolate</a><br>
-    <a href="food/pastes.md">Pastes</a><br>
-    <a href="food/paymanzana.md">Pay de manzana</a><br>
-    <a href="food/paynuez.md">Pay de nuez</a><br>
-    <a href="food/paypina.md">Pay de piña</a><br>
-    <a href="food/payquesofrio.md">Pay frío de queso</a><br>
-    <a href="food/rolescanela.md">Roles de Canela</a><br>
-    <a href="food/salsas.md">Salsas</a><br>
-    <a href="food/scones.md">Scones</a><br>
-    <a href="food/rules.pdf">Food rules</a><br>
+    <a href="recetas/arroz.md">Arroz</a><br>
+    <a href="recetas/bollos.md">Bollos de cardamomo</a><br>
+    <a href="recetas/brownies.md">Brownies</a><br>
+    <a href="recetas/carlota.md">Carlota de limón</a><br>
+    <a href="recetas/conversiones.md">Conversiones</a><br>
+    <a href="recetas/easyrolescanela.md">Roles de canela rápidos</a><br>
+    <a href="recetas/galletasalmendra.md">Galletas navideñas de almendra</a><br>
+    <a href="recetas/galletasavena.md">Galletas de avena</a><br>
+    <a href="recetas/galletaschocolate.md">Galletas de chispas de chocolate</a><br>
+    <a href="recetas/huevos.md">Huevos</a><br>
+    <a href="recetas/indian.md">Recetas de la India</a><br>
+    <a href="recetas/masapay.md">Masa para pay</a><br>
+    <a href="recetas/masapayrustico.md">Masa para pay rústico</a><br>
+    <a href="recetas/masapizza.md">Masa para pizza</a><br>
+    <a href="recetas/muffinsavena.md">Muffins de avena</a><br>
+    <a href="recetas/pancakes.md">Pancakes</a><br>
+    <a href="recetas/pancenteno.md">Pan de centeno</a><br>
+    <a href="recetas/panchapata.md">Chapata</a><br>
+    <a href="recetas/buns.md">Pan para hamburguesa</a><br>
+    <a href="recetas/panmasamadre.md">Pan de masa madre</a><br>
+    <a href="recetas/panqueplatano.md">Panqué de plátano</a><br>
+    <a href="recetas/pastelchocolate.md">Pastel de chocolate</a><br>
+    <a href="recetas/pastes.md">Pastes</a><br>
+    <a href="recetas/paymanzana.md">Pay de manzana</a><br>
+    <a href="recetas/paynuez.md">Pay de nuez</a><br>
+    <a href="recetas/paypina.md">Pay de piña</a><br>
+    <a href="recetas/payquesofrio.md">Pay frío de queso</a><br>
+    <a href="recetas/rolescanela.md">Roles de Canela</a><br>
+    <a href="recetas/salsas.md">Salsas</a><br>
+    <a href="recetas/scones.md">Scones</a><br>
+    <a href="recetas/rules.pdf">Food rules</a><br>
   </div>
   
 <!-- ---------------------------------------------------------------- -->
