--- a/recetas.html
+++ b/recetas.html
@@ -18,6 +18,7 @@
     Aquí están los links a mis principales recetas. <br>
     <br>
     <a href="recetas/arroz.md">Arroz</a><br>
+    <a href="recetas/brasil.md">Postres Brasileños</a><br>
     <a href="recetas/bollos.md">Bollos de cardamomo</a><br>
     <a href="recetas/brownies.md">Brownies</a><br>
     <a href="recetas/carlota.md">Carlota de limón</a><br>
